--- a/index.html
+++ b/index.html
@@ -922,6 +922,9 @@
     }
 
     function loginUser() {
+      const loginButton = document.getElementById("login-btn");
+      loginButton.disabled = true;
+      loginButton.textContent = "Logging in...";
       const username = document.getElementById('authUsername').value.trim();
       const password = document.getElementById('authPassword').value;
       const errorMessage = document.getElementById("loginErrorMessage");
@@ -935,6 +938,8 @@
           errorMessage.style.display = "block";
           errorMessage.textContent = "Please enter your username and password.";
         }
+        loginButton.disabled = false;
+        loginButton.textContent = "Login";
         return;
       }
       db.collection("users").doc(username).get().then(doc => {
@@ -945,20 +950,26 @@
             // alert("Login successful!"); // Removed to prevent message box after successful login
             console.log("User authenticated, proceeding to homepage...");
             loggedInUser = username;
-            document.getElementById('authContainer').style.display = 'none';
-            document.getElementById('home').style.display = 'block';
-            // Show sign out button after login
-            document.getElementById("signOutBtn").style.display = "block";
-            if (errorMessage) {
-              errorMessage.style.display = "none";
-              errorMessage.textContent = "";
-            }
+            requestIdleCallback(() => {
+              document.getElementById('authContainer').style.display = 'none';
+              document.getElementById('home').style.display = 'block';
+              loginButton.disabled = false;
+              loginButton.textContent = "Login";
+              // Show sign out button after login
+              document.getElementById("signOutBtn").style.display = "block";
+              if (errorMessage) {
+                errorMessage.style.display = "none";
+                errorMessage.textContent = "";
+              }
+            });
           } else {
             // Show error message for incorrect password
             if (errorMessage) {
               errorMessage.style.display = "block";
               errorMessage.textContent = "Incorrect username or password. Please try again.";
             }
+            loginButton.disabled = false;
+            loginButton.textContent = "Login";
           }
         } else {
           // Show error message for non-existent user
@@ -966,9 +977,30 @@
             errorMessage.style.display = "block";
             errorMessage.textContent = "Incorrect username or password. Please try again.";
           }
+          loginButton.disabled = false;
+          loginButton.textContent = "Login";
         }
+      }).catch(() => {
+        loginButton.disabled = false;
+        loginButton.textContent = "Login";
       });
     }
+  // --------- IMAGE PRELOADING ---------
+  // Preload all key images to reduce lag
+  const preloadImages = [
+    'Images/Background.jpeg',
+    'Images/Background_1.jpeg',
+    'Images/Background_2.jpeg',
+    'Images/Background_3.jpeg',
+    'Images/Cat/cat.jpeg',
+    'Images/Owl/owl_on_branch.jpeg',
+    'Images/Turtle/turtle.jpeg',
+    'Images/Monkey/monkey_before_swing.jpeg'
+  ];
+  preloadImages.forEach(src => {
+    const img = new Image();
+    img.src = src;
+  });
 
     function startGame() {
       const playerNameInput = loggedInUser;
@@ -1381,7 +1413,7 @@
           waveParent.style.backgroundSize = 'cover';
           waveParent.style.backgroundPosition = 'center';
           waveParent.style.backgroundRepeat = 'no-repeat';
-          waveParent.style.transition = 'background-image 0.4s ease-in-out';
+          waveParent.style.transition = 'background-image 0.8s ease-in-out';
           waveParent.style.backgroundImage = "url('Images/Background.jpeg')";
         }
         // Blinking/cycling backgrounds on parent container
@@ -1392,12 +1424,12 @@
           }
           blinkInterval = setInterval(() => {
             waveParent.style.backgroundImage = `url('${backgroundImages[currentBackgroundIndex]}')`;
-            waveParent.style.transition = 'background-image 0.4s ease-in-out';
+            waveParent.style.transition = 'background-image 0.8s ease-in-out';
             waveParent.style.backgroundSize = 'cover';
             waveParent.style.backgroundPosition = 'center';
             waveParent.style.backgroundRepeat = 'no-repeat';
             currentBackgroundIndex = (currentBackgroundIndex + 1) % backgroundImages.length;
-          }, 300);
+          }, 600);
           const blinkDuration = selections.stimDuration * 0.6 * 1000;
           setTimeout(() => {
             clearInterval(blinkInterval);
@@ -1555,96 +1587,135 @@
       document.getElementById('gameOver').appendChild(chartContainer); // Append chart to game over section
       chartContainer.style.display = 'block'; // Ensure the chart container is visible
 
-      const groupedResults = trialResults.reduce((acc, trial, index) => {
-        const groupKey = Math.floor(index / 5); // Group trials into chunks of 5
-        acc[trial.type] = acc[trial.type] || [];
-        if (!acc[trial.type][groupKey]) acc[trial.type][groupKey] = { correct: 0, incorrect: 0 };
-        if (trial.correct) {
-          acc[trial.type][groupKey].correct++;
-        } else {
-          acc[trial.type][groupKey].incorrect++;
+      // Hide all charts by default
+      document.getElementById('noDistractorChart').style.display = 'none';
+      document.getElementById('auditoryDistractorChart').style.display = 'none';
+      document.getElementById('visualDistractorChart').style.display = 'none';
+
+      // Remove old interpretations/arrows before rendering new ones
+      ['noDistractorChart', 'auditoryDistractorChart', 'visualDistractorChart'].forEach(id => {
+        let interp = document.getElementById(`${id}-interp`);
+        while (interp) {
+          const next = interp.nextSibling;
+          interp.remove();
+          if (next && next.tagName === 'P' && next.textContent && next.textContent.includes('Increasing Difficulty')) {
+            next.remove();
+          }
+          interp = document.getElementById(`${id}-interp`);
         }
-        return acc;
-      }, { none: [], sound: [], visual: [] });
+      });
 
-      // Pass difficulty mode to prepareChartData
-      const difficultyMode = selections.difficulty; // "easy", "medium", ..., or "adaptive"
+      // Filter trialResults by type
+      const trialsNone = trialResults.filter(tr => tr.type === 'none');
+      const trialsSound = trialResults.filter(tr => tr.type === 'sound');
+      const trialsVisual = trialResults.filter(tr => tr.type === 'visual');
 
-      // Helper function to prepare data for Chart.js, now takes difficultyMode
-      function prepareChartData(groupedData, difficultyMode) {
+      const hasNone = trialsNone.length > 0;
+      const hasSound = trialsSound.length > 0;
+      const hasVisual = trialsVisual.length > 0;
+
+      // Helper to group trials into chunks of 5 (or by difficulty in adaptive)
+      function groupTrials(trials, difficultyMode) {
+        const grouped = [];
+        if (difficultyMode === "adaptive") {
+          // Group by difficulty, then by order
+          // Map: {easy:[], medium:[], hard:[], veryHard:[]}
+          const diffOrder = ['easy', 'medium', 'hard', 'veryHard'];
+          const byDiff = { easy: [], medium: [], hard: [], veryHard: [] };
+          // Find which adaptive level each trial was
+          let trialIdx = 0;
+          trials.forEach(trial => {
+            // Try to infer adaptive level from order if possible
+            // For now, just distribute evenly in order
+            const diff = diffOrder[trialIdx % 4];
+            byDiff[diff].push(trial);
+            trialIdx++;
+          });
+          // Flatten by difficulty, 5 per group
+          let all = [];
+          diffOrder.forEach(level => { all = all.concat(byDiff[level]); });
+          for (let i = 0; i < all.length; i += 5) {
+            const chunk = all.slice(i, i + 5);
+            grouped.push(chunk);
+          }
+        } else {
+          for (let i = 0; i < trials.length; i += 5) {
+            grouped.push(trials.slice(i, i + 5));
+          }
+        }
+        return grouped;
+      }
+
+      function prepareChartData(trials, difficultyMode) {
+        const groups = groupTrials(trials, difficultyMode);
         const labels = [];
         const correctData = [];
         const incorrectData = [];
-
-        groupedData.forEach((group, index) => {
+        groups.forEach((chunk, idx) => {
           let label;
           if (difficultyMode === 'adaptive') {
-            // Adaptive: cycle through Easy, Medium, Hard, Very Hard
-            const difficultyGroup = ['Easy', 'Medium', 'Hard', 'Very Hard'][index % 4];
-            label = `${difficultyGroup} #${Math.floor(index / 4) + 1}`;
+            const difficultyGroup = ['Easy', 'Medium', 'Hard', 'Very Hard'][idx % 4];
+            label = `${difficultyGroup} #${Math.floor(idx / 4) + 1}`;
           } else {
-            label = `${difficultyMode.charAt(0).toUpperCase() + difficultyMode.slice(1)} #${index + 1}`;
+            label = `${difficultyMode.charAt(0).toUpperCase() + difficultyMode.slice(1)} #${idx + 1}`;
           }
           labels.push(label);
-          correctData.push(group.correct);
-          incorrectData.push(group.incorrect);
+          correctData.push(chunk.filter(t => t.correct).length);
+          incorrectData.push(chunk.filter(t => !t.correct).length);
         });
-
         return { labels, correctData, incorrectData };
       }
 
-      // Prepare data for each chart, pass difficulty
-      const noDistractorData = prepareChartData(groupedResults.none, selections.difficulty);
-      const auditoryDistractorData = prepareChartData(groupedResults.sound, selections.difficulty);
-      const visualDistractorData = prepareChartData(groupedResults.visual, selections.difficulty);
-
-      // Render charts conditionally based on distractor type usage
-      if (groupedResults.none.length > 0) {
-        renderChart('noDistractorChart',
-                    'No Distractors',
-                    noDistractorData,
-                    'Sensory Threshold (2)');
-      } else {
-        document.getElementById('noDistractorChart').style.display = 'none';
+      // Only render charts for distractor types that were played
+      if (hasNone) {
+        document.getElementById('noDistractorChart').style.display = 'block';
+        const noDistractorData = prepareChartData(trialsNone, selections.difficulty);
+        renderChart('noDistractorChart', 'No Distractors', noDistractorData, 'Sensory Threshold (2)', true);
       }
-
-      if (groupedResults.sound.length > 0) {
-        renderChart('auditoryDistractorChart',
-                    'Auditory Distractors',
-                    auditoryDistractorData,
-                    'Attention Threshold (2)');
-      } else {
-        document.getElementById('auditoryDistractorChart').style.display = 'none';
+      if (hasSound) {
+        document.getElementById('auditoryDistractorChart').style.display = 'block';
+        const auditoryDistractorData = prepareChartData(trialsSound, selections.difficulty);
+        renderChart('auditoryDistractorChart', 'Auditory Distractors', auditoryDistractorData, 'Attention Threshold (2)', true);
       }
-
-      if (groupedResults.visual.length > 0) {
-        renderChart('visualDistractorChart',
-                    'Visual Distractors',
-                    visualDistractorData,
-                    'Attention Threshold (2)');
-      } else {
-        document.getElementById('visualDistractorChart').style.display = 'none';
+      if (hasVisual) {
+        document.getElementById('visualDistractorChart').style.display = 'block';
+        const visualDistractorData = prepareChartData(trialsVisual, selections.difficulty);
+        renderChart('visualDistractorChart', 'Visual Distractors', visualDistractorData, 'Attention Threshold (2)', true);
       }
-
-      // exportResultsToPDF(); // (PDF download temporarily disabled)
     }
 
-    function renderChart(canvasId, title, data, thresholdLabel) {
+    function renderChart(canvasId, title, data, thresholdLabel, showInterpretation) {
+      // Remove old interpretation and arrow if present (done by displayResultsChart, but in case of rerender)
+      let interp = document.getElementById(`${canvasId}-interp`);
+      while (interp) {
+        const next = interp.nextSibling;
+        interp.remove();
+        if (next && next.tagName === 'P' && next.textContent && next.textContent.includes('Increasing Difficulty')) {
+          next.remove();
+        }
+        interp = document.getElementById(`${canvasId}-interp`);
+      }
+
       // Calculate total correct and determine interpretation
       const totalCorrect = data.correctData.reduce((a, b) => a + b, 0);
-      const interpretationText = totalCorrect > 2
-          ? (canvasId === 'noDistractorChart'
-              ? 'Good Sensory function'
-              : 'No attentional issues')
-          : (canvasId === 'noDistractorChart'
-              ? 'Poor sensory function'
-              : (canvasId === 'auditoryDistractorChart'
-                  ? 'Attentional issues in the presence of lights'
-                  : 'Sound‑related attentional issues'));
+      let interpretationText = "";
+      let interpColor = "green";
+      // Map interpretations strictly per instructions
+      if (canvasId === 'noDistractorChart') {
+        interpretationText = totalCorrect > 2 ? "Good sensory function" : "Poor sensory function";
+        interpColor = totalCorrect > 2 ? "green" : "red";
+      } else if (canvasId === 'auditoryDistractorChart') {
+        interpretationText = "Sound-related attentional issues";
+        interpColor = "red";
+      } else if (canvasId === 'visualDistractorChart') {
+        interpretationText = "Visual-related attentional issues";
+        interpColor = "red";
+      }
 
-      // Remove old interpretation paragraph if present
-      const oldP = document.querySelector(`#${canvasId}-interp`);
-      if (oldP) oldP.remove();
+      // For auditory/visual chart: only show interpretation if chart was rendered (per showInterpretation param)
+      // For auditory/visual, only show "attentional issues" if present, not "no attentional issues"
+      if (canvasId === 'auditoryDistractorChart' && totalCorrect > 2) interpretationText = "";
+      if (canvasId === 'visualDistractorChart' && totalCorrect > 2) interpretationText = "";
 
       const ctx = document.getElementById(canvasId).getContext('2d');
       new Chart(ctx, {
@@ -1696,26 +1767,29 @@
         },
       });
 
-      // Add interpretation text and arrow below the chart container
-      const canvasEl = document.getElementById(canvasId);
-      const interp = document.createElement('p');
-      interp.id = `${canvasId}-interp`;
-      interp.style.color = (interpretationText.includes('Sound') ? 'red' : 'green');
-      interp.style.fontWeight = 'bold';
-      interp.textContent = interpretationText;
+      // Only append interpretation text and arrow if chart was rendered and interpretationText is not empty
+      if (showInterpretation && interpretationText) {
+        const canvasEl = document.getElementById(canvasId);
+        const interpP = document.createElement('p');
+        interpP.id = `${canvasId}-interp`;
+        interpP.style.color = interpColor;
+        interpP.style.fontWeight = 'bold';
+        interpP.style.marginTop = "10px";
+        interpP.style.marginBottom = "8px";
+        interpP.textContent = interpretationText;
 
-      // Arrow label
-      const arrow = document.createElement('p');
-      arrow.style.color = 'navy';
-      arrow.style.fontSize = '0.9em';
-      arrow.style.marginTop = '-5px';
-      arrow.style.marginBottom = '15px';
-      arrow.textContent = 'Increasing Difficulty →';
+        // Arrow label below interpretation
+        const arrow = document.createElement('p');
+        arrow.style.color = 'blue';
+        arrow.style.fontSize = '0.95em';
+        arrow.style.marginTop = '2px';
+        arrow.style.marginBottom = '18px';
+        arrow.textContent = 'Increasing Difficulty →';
 
-      // Place both interp and arrow at the bottom of the chart container
-      const container = canvasEl.parentNode;
-      container.appendChild(interp);
-      container.appendChild(arrow);
+        // Place interp and arrow directly after the canvas (interp below chart, arrow below interp)
+        canvasEl.parentNode.insertBefore(interpP, canvasEl.nextSibling);
+        canvasEl.parentNode.insertBefore(arrow, interpP.nextSibling);
+      }
     }
 
     function toggleSound() {
