--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       border: 2px solid #FFD700;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Comic Sans MS', 'Arial', sans-serif;
     }
 
     #registerPage button {
@@ -100,7 +100,7 @@
       color: #fff;
       text-shadow: 1px 1px 3px #000;
       /* Playful kid-friendly font */
-      font-family: 'Comic Sans MS', cursive;
+      font-family: 'Comic Sans MS', 'Arial', sans-serif;
       letter-spacing: 1px;
     }
 
@@ -114,7 +114,7 @@
       border: 2px solid #FFD700;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Comic Sans MS', 'Arial', sans-serif;
     }
 
     #authContainer button {
@@ -134,7 +134,7 @@
     }
     body {
       margin: 0;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Comic Sans MS', 'Arial', sans-serif;
       background: url('Images/Background.jpeg') no-repeat center center fixed;
       background-size: cover;
       image-rendering: auto;
